# bloom-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: crates.yml
examples/: benchmark.rs  simple.rs
src/: lib.rs
