[package]
name = "bloomlib"
version = "0.1.4"
edition = "2021"
description = "A space and time efficient Bloom Filter implementation in Rust."
authors = ["Waclaw Kusnierczyk <wacus@pm.me>"]
license = "MIT"
repository = "https://github.com/wkusnierczyk/bloomlib"
exclude = [
    ".github/*"
]

[dependencies]
# No external dependencies required for the core logic to keep it lightweight.
# The standard library's hashing is used.
